Fix align message in topic

--- a/app/assets/stylesheets/message.css.scss
+++ b/app/assets/stylesheets/message.css.scss
@@ -43,6 +43,6 @@ section.message {
   .body {
     width: auto;
     text-align: justify;
-    padding-left: 72px;
+    padding-left: 62px;
   }
 }
